LLM_on_Kubernetes/Inference_Platfrom/07-L1-Cache/LMCache/lmcache-deployment.yaml
# 01-lmcache-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lmcache
---
# 02-lmcache-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lmcache-server
  namespace: lmcache
spec:
  serviceName: lmcache-server
  replicas: 1
  selector:
    matchLabels:
      app: lmcache-server
  template:
    metadata:
      labels:
        app: lmcache-server
    spec:
      #nodeSelector:
      #  kubernetes.io/hostname: k8s-node02.magedu.com
      containers:
        - name: server
          image: lmcache/vllm-openai:v0.3.15
          command: ["/opt/venv/bin/python3", "-m", "lmcache.v1.multiprocess.server"]
          args:
            - "--host"
            - "0.0.0.0"          # 绑定所有接口
            - "--port"
            - "5555" 
            - "--l1-size-gb"
            - "10"
            - "--eviction-policy"
            - "LRU"
            - "--chunk-size"
            - "256"
          ports:
            - containerPort: 5555
              name: zmq
            - containerPort: 9090
              name: prometheus
          resources:
            requests:
              memory: "16Gi"
              cpu: "4"
              nvidia.com/gpu: "1"
            limits:
              memory: "16Gi"
              cpu: "4"
              nvidia.com/gpu: "1"
---
# 03-lmcache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmcache-server
  namespace: lmcache
spec:
  selector:
    app: lmcache-server
  ports:
    - port: 5555
      targetPort: 5555
      name: zmq
    - port: 9090
      targetPort: 9090
      name: prometheus
---
